--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -1146,6 +1146,22 @@ config TOUCHSCREEN_TOUCHX
           To compile this driver as a module, choose M here: the
           module will be called touchx.
 
+config TOUCHSCREEN_SWEEP2WAKE
+        tristate "Sweep2Wake for touchscreens"
+        select TOUCHSCREEN_PREVENT_SLEEP
+        default y
+
+config TOUCHSCREEN_DOUBLETAP2WAKE
+        tristate "DoubleTap2Wake for touchscreens"
+        select TOUCHSCREEN_PREVENT_SLEEP
+        default y
+
+config TOUCHSCREEN_PREVENT_SLEEP
+        bool "Inihibit sleep on modified touchscreen drivers"
+        default y
+        help
+          This disables the sleep function of modified touchscreen drivers.
+
 source "drivers/input/touchscreen/gt9xx/Kconfig"
 
 endif
