--- a/arch/arm/configs/titan_defconfig
+++ b/arch/arm/configs/titan_defconfig
@@ -36,6 +36,9 @@ CONFIG_CPU_FREQ_GOV_ZZMOOVE=y
 # Screen & GPU
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 CONFIG_SIMPLE_GPU_ALGORITHM=y
+CONFIG_TOUCHSCREEN_DOUBLETAP2WAKE=y
+CONFIG_TOUCHSCREEN_PREVENT_SLEEP=y
+CONFIG_TOUCHSCREEN_SWEEP2WAKE=y
 
 # TCP congestion controllers
 CONFIG_TCP_CONG_ADVANCED=y
